<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@drawable/about_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/eventMainCard"
        android:layout_width="319dp"
        android:layout_height="585dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="598dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="A propos de l'application Miage Rage Festival 2022"
                    android:gravity="center"
                    android:textColor="@color/deepBlue"
                    android:textSize="11sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte1"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte2"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte3"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte4"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte5"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte6"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte7"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:justificationMode="inter_word"
                    android:padding="2sp"
                    android:text="@string/texte8"
                    android:textColor="@color/deepBlue"
                    android:textSize="10dp"/>




            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>